--- a/_site.yml
+++ b/_site.yml
@@ -11,6 +11,10 @@ navbar:
         href: "TH_EX/TH_EX1.html"
       - text: "Take-home Exercise 2"
         href: "TH_EX/TH_EX2.html"
+    - text: "In-class Exercise"
+      menu:
+      - text: "In-class Exercise 4"
+        href: "In_class_exercise/Inclassexercise04.html"
   right:
     - text: "Home"
       href: index.html
