1st commit THEX3

--- a/_site.yml
+++ b/_site.yml
@@ -11,6 +11,8 @@ navbar:
         href: "TH_EX/TH_EX1.html"
       - text: "Take-home Exercise 2"
         href: "TH_EX/TH_EX2.html"
+      - text: "Take-home Exercise 3"
+        href: "TH_EX/TH_EX3.html"
     - text: "In-class Exercise"
       menu:
       - text: "In-class Exercise 4"
