--- a/_site.yml
+++ b/_site.yml
@@ -15,6 +15,8 @@ navbar:
         href: "TH_EX/TH_EX3.html"
       - text: "Take-home Exercise 4"
         href: "TH_EX/TH_EX4.html"
+      - text: "Take-home Exercise 5"
+        href: "TH_EX/TH_EX5.html"
     - text: "In-class Exercise"
       menu:
       - text: "In-class Exercise 4"
