--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "ISSS608_lesson1"
-title: "ISSS608_Visualisation"
+title: "Visualisation"
 description: |
-  ISSS608_Visualisation
+  Visualisation
 output_dir: "_site"
 navbar:
   left:
